# wordsplit

./: Cargo.toml  README.md
src/: lib.rs
tests/: base_tests.rs  negative_tests.rs
